@@ -10,6 +10,9 @@ Bug Fixes
 - Fix a bug in ``SignedSerializer`` preventing secrets from containing
   higher-order characters. See https://github.com/Pylons/webob/issues/136
 
+- Use the ``hmac.compare_digest`` method when available for constant-time
+  comparisons.
+
 1.3.1 (2013-12-13)
 ------------------
 
